--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>中科院智慧后勤平台资产定位系统</title>
+    <!-- <title>中科院智慧后勤平台资产定位系统</title> -->
+    <title>中科院资产盘点管理系统</title>
   </head>
   <body>
     <div id="app"></div>
-    <script src="https://cdn.bootcss.com/echarts/4.2.0-rc.2/echarts-en.common.min.js"></script>
+    <!-- <script src="./js/echarts.js"></script> -->
   </body>
+  <script src="https://cdn.bootcss.com/echarts/4.2.0-rc.2/echarts-en.common.min.js"></script>
 </html>
