--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <div id="app"></div>
     <!-- <script src="./js/echarts.js"></script> -->
   </body>
-  <script src="https://cdn.bootcss.com/echarts/4.2.0-rc.2/echarts-en.common.min.js"></script>
+  <!-- <script src="https://cdn.bootcss.com/echarts/4.2.0-rc.2/echarts-en.common.min.js"></script>
+   -->
+   <!-- <script src="asset/Public/js/jquery.min.js"></script> -->
 </html>
